Up to date to original project

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 html {
@@ -32,7 +32,7 @@ a {
 p {
     font-size: 1.6rem;
     color: #707070;
-    font-family: 'Roboto', san-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
@@ -83,7 +83,7 @@ hr {
 }
 
 .icon {
-    font-size: 3.2rem;
+    /* font-size: 3.2rem; */
     color: #707070;
 }
 
@@ -124,7 +124,7 @@ hr {
 
 .button-primary {
     color: #FBFEFD;
-    background-color: hsl(221, 100%, 39%);
+    background-color: hsl(221deg, 100%, 39%);
 }
 
 .button-secondary {
@@ -144,7 +144,7 @@ hr {
 /* ==================== LAYOUT ==================== */
 .container {
     max-width: 1200px;
-    width: calc(100% -1.6rem);
+    width: calc(100% - 1.6rem);
     margin: 0 0.8rem;
 }
 
@@ -253,11 +253,302 @@ hr {
 
 /* ==================== HOME - HERO SECTION ==================== */
 main {
-    position: absolute;
+    position: relative;
     top: 6.5rem;
+    min-height: 100vh;
+    margin: 0 auto;
+}
+
+.home {
+    height: calc(100vh - 6.5rem);
+    background-color: #FBFEFD;
+}
+
+.home__container {
+    height: 100%;
+    grid-template-rows: 1.1fr 0.9fr;
+    align-content: space-evenly;
+    text-align: center;
+}
+
+.home__img,
+.home__data {
+    width: 100%;
+}
+
+.home__img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home__img img {
+    width: 20rem;
+    height: 20rem;
+}
+
+.home__data {
+    display: flex;
+    flex-direction: column;
+}
+
+.home__title,
+.home__subtitle {
+    margin-bottom: 3.2rem;
+}
+
+.home__title {
+    color: #393939;
+    font-size: 3.7rem;
+}
+
+.home__title span {
+    color: hsl(162deg, 100%, 38%);
+}
+
+.home__subtitle {
+    font-size: 1.6rem;
+}
+
+.home__ctas {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.home__ctas .button {
+    margin: 0 auto;
+    text-align: center;
+    width: 75%;
+    padding: calc(1.1rem - 1px) calc(1.5rem - 1px);
 }
 
 /* ==================== FEATURES ==================== */
+.features {
+    background-color: rgba(246, 246, 246, 0.6745098039);
+}
+
+.features__container {
+    row-gap: 2.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+
+.features__content {
+    text-align: center;
+    margin-bottom: 0.8rem;
+}
+
+.features__img {
+    width: 64px;
+    height: 64px;
+    fill: hsl(221deg, 100%, 39%);
+    margin-bottom: 1.6rem;
+}
+
+.features__title {
+    font-size: 1.8rem;
+    color: #393939;
+    margin-bottom: 0.8rem;
+}
+
+.features__description {
+    font-size: 1.4rem;
+    color: #707070;
+    padding: 0 2.4rem;
+}
+
 /* ==================== PRODUCT ==================== */
+.product__container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-color: #FBFEFD;
+    padding: 1.2rem;
+    text-align: center;
+}
+
+.product__img {
+    width: 25rem;
+    align-self: center;
+    margin-bottom: 1.6rem;
+}
+
+.product__name,
+.product__price {
+    font-weight: 600;
+    color: #393939;
+}
+
+.product__name {
+    font-size: 1.8rem;
+    color: hsl(221deg, 100%, 39%);
+    margin-bottom: 1.6rem;
+}
+
+.product__price {
+    font-size: 1.6rem;
+    margin-bottom: 1.6rem;
+}
+
+.product .button {
+    width: 14rem;
+    color: #FBFEFD;
+    margin: 0 auto;
+}
+
 /* ==================== MEDIA QUERIES ==================== */
+/* ==================== Max Width ==================== */
+@media screen and (max-width: 767px) {
+    .nav__cart .button {
+        display: none;
+    }
+}
+
+/* For extremely small screen devices (595px and below */
+@media screen and (max-width:595px) {
+    .nav__menu {
+        font-size: 1.8rem;
+    }
+
+    .nav .button {
+        font-size: 1.3rem;
+    }
+
+    .nav .button-secondary {
+        margin-right: 0.8rem;
+    }
+}
+
+/* For extremely small screen devices (400px and below) */
+@media screen and (max-width: 389px) {
+    .home__img img {
+        width: 20rem;
+        height: 20rem;
+    }
+
+    .home__title,
+    .home__subtitle {
+        margin-bottom: 2.4rem;
+    }
+
+    .home__title {
+        font-size: 2.9rem;
+    }
+
+    .home__subtitle {
+        font-size: 1.4rem;
+    }
+}
+
+/* For extremely small screen devices (300px and below) */
+@media screen and (max-width: 300px) {
+    .home_-title {
+        font-size: 2.3rem;
+    }
+
+    .home__subtitle {
+        font-size: 1.1rem;
+    }
+}
+
 /* ==================== MIN WIDTH ==================== */
+@media screen and (min-width: 450px) {
+    .nav__menu {
+        width: 50%;
+    }
+}
+
+/* Medim screen devices (768px and above) */
+@media only screen and (min-width: 768px) {
+    hr {
+        display: none;
+    }
+
+    .icon {
+        font-size: 2.4rem;
+    }
+
+    .nav__toggle {
+        display: none;
+    }
+
+    .nav__menu,
+    .nav__list {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .nav__item {
+        margin: 0;
+        display: flex;
+        align-items: center;
+    }
+
+    .nav__list {
+        justify-content: space-evenly;
+        font-size: 1.6rem;
+    }
+
+    .nav__link::after {
+        display: block;
+        content: "";
+        border-bottom: 2px solid hsl(221deg, 100%, 39%);
+        transform: scaleX(0);
+        transition: transform 0.25s ease-in-out;
+        transform-origin: 100% 50%;
+    }
+
+    .nav__link:hover::after {
+        transform: scaleX(1);
+        transform-origin: 0% 50%;
+    }
+
+    .nav__link:active {
+        color: hsl(221deg, 100%, 54%);
+    }
+
+    .nav__ctas {
+        display: none;
+    }
+
+    .home__container {
+        position: relative;
+        grid-template-columns: 1.1fr 0.9fr;
+        -moz-column-gap: 2rem;
+        column-gap: 2rem;
+        align-items: center;
+        text-align: unset;
+    }
+
+    .home__img {
+        order: 1;
+    }
+
+    .home__img img {
+        width: auto;
+        height: auto;
+    }
+
+    .home__title {
+        font-size: 4.2rem;
+    }
+
+    .home__ctas {
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    .home__ctas .button {
+        margin: 0;
+        width: 13rem;
+    }
+}
+
+/* Big screen devices (889px and above) */
+/* Extra big screen devices (1200px and above) */
+@media only screen and (min-width: 1200px) {
+    .container {
+        margin: 0 auto;
+    }
+}
